WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237537
File System Access: throw exception if file or directory cannot be accessed in file system
https://bugs.webkit.org/show_bug.cgi?id=237537
Summary
File System Access: throw exception if file or directory cannot be accessed i...
Sihui Liu
Reported
2022-03-07 09:25:24 PST
...
Attachments
Patch
(6.08 KB, patch)
2022-03-07 15:09 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.09 KB, patch)
2022-03-08 11:28 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.09 KB, patch)
2022-03-08 11:29 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-03-07 15:09:03 PST
Created
attachment 454041
[details]
Patch
youenn fablet
Comment 2
2022-03-08 01:03:07 PST
Comment on
attachment 454041
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=454041&action=review
> Source/WebKit/NetworkProcess/storage/FileSystemStorageHandle.cpp:60 > + return nullptr;
Should we add release logging if we are not able to create the file handle?
Chris Dumez
Comment 3
2022-03-08 07:22:33 PST
Comment on
attachment 454041
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=454041&action=review
I assume this is not testable?
> Source/WebKit/ChangeLog:8 > + When a FileSystemHandle is created, we will ensure that correspoding directory or file exists (create the
Typo: correspoding
Sihui Liu
Comment 4
2022-03-08 11:27:12 PST
Comment on
attachment 454041
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=454041&action=review
>> Source/WebKit/NetworkProcess/storage/FileSystemStorageHandle.cpp:60 >> + return nullptr; > > Should we add release logging if we are not able to create the file handle?
The boolean result does not contain error information (and from the error type we can probably infer the errored place), so I would prefer adding error log when we need to debug an error we spot in production builds.
Sihui Liu
Comment 5
2022-03-08 11:28:21 PST
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 454041
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=454041&action=review
> > I assume this is not testable? > > > Source/WebKit/ChangeLog:8 > > + When a FileSystemHandle is created, we will ensure that correspoding directory or file exists (create the > > Typo: correspoding
ah will change
Sihui Liu
Comment 6
2022-03-08 11:28:37 PST
Created
attachment 454135
[details]
Patch for landing
Sihui Liu
Comment 7
2022-03-08 11:29:00 PST
Created
attachment 454136
[details]
Patch for landing
EWS
Comment 8
2022-03-08 15:06:01 PST
Committed
r291014
(
248189@main
): <
https://commits.webkit.org/248189@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454136
[details]
.
Radar WebKit Bug Importer
Comment 9
2022-03-08 15:07:18 PST
<
rdar://problem/89992180
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug